<resources>
    <string name="app_name">Best Kick</string>
    <string name="project_name">Catalysts, Explorers &amp; Secret Keepers: Women of SF</string>
    <string name="pleadge">Pleadge - $80000</string>
    <string name="backers">Backers - 1500</string>
    <string name="noOfDaysToGo">No. Of Days To Go - 21</string>
    <string name="details">Details</string>
    <string name="by">By- Museum of Science Fiction</string>
    <string name="blurb"><![CDATA[\'Catalysts, Explorers & Secret Keepers: Women of Science Fiction\' is a take-home exhibit & anthology by the Museum of Science Fiction.]]></string>
    <string name="about">About this project:</string>
    <string name="backers_label">Backers: </string>
    <string name="location_label">Location: </string>
    <string name="country_label">Country: </string>
    <string name="pledged_amount">Pledged Amount: </string>
    <string name="percentage_funded">Percentage Funded: </string>
    <string name="noOfDaysToGoLabel">No. Of Days To Go: </string>
    <string name="read_more">+ Read More</string>
    <string name="portfolio">Portfolio</string>
    <string name="filter">Filter</string>
    <string name="sort">Always</string>
    <string name="sync_account_type">com.webianks.test.bestkick</string>
    <string name="enter_backers">Enter Backers</string>
    <string name="search">Search</string>
</resources>
