<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_bottom_margin"
    android:layout_marginLeft="@dimen/card_margin"
    android:layout_marginRight="@dimen/card_margin"
    android:layout_marginTop="@dimen/card_top_margin"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/card_radius_single_project">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/all_content_paddding">

        <TextView
            android:id="@+id/projectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_name"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pleadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pleadge" />

        <TextView
            android:id="@+id/backers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backers" />

        <TextView
            android:id="@+id/noOfDaysToGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noOfDaysToGo" />


    </LinearLayout>

</android.support.v7.widget.CardView>