<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="@color/white"
                android:textSize="@dimen/app_title_size"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/all_content_padding"
                android:text="@string/project_name"
                android:textSize="@dimen/app_title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/all_content_padding"
                android:paddingRight="@dimen/all_content_padding"
                android:text="@string/by"
                android:layout_gravity="right"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:layout_margin="@dimen/all_content_padding"
                >
                <TextView
                    android:id="@+id/blurb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/all_content_padding"
                    android:background="@color/white"
                    android:layout_marginLeft="@dimen/blurb_margin"
                    android:text="@string/blurb" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>